Updated files and added raw html files

--- a/Tolu/HTML_Stuff/assets/css/d3Style.css
+++ b/Tolu/HTML_Stuff/assets/css/d3Style.css
@@ -19,7 +19,7 @@
 
 .inactive {
   font-weight: lighter;
-  fill: #c9c9c9;
+  fill: dimgray;
   transition: fill 0.5s ease-out;
   text-anchor: middle;
 }
