--- a/Tolu/HTML_Stuff/assets/css/style.css
+++ b/Tolu/HTML_Stuff/assets/css/style.css
@@ -62,6 +62,14 @@ body{
   background-color: lightgrey;
 }
 
+#map {
+  position: relative;
+  border: 1px black;
+  border-radius: 8px;
+  height: 500px;
+  width: 100%;
+}
+
 .header{
   margin-top: 0;
   font-family: 'Barlow Condensed', sans-serif;
