--- a/Tolu/HTML_Stuff/assets/css/style.css
+++ b/Tolu/HTML_Stuff/assets/css/style.css
@@ -66,7 +66,7 @@ body{
   position: relative;
   border: 1px black;
   border-radius: 8px;
-  height: 500px;
+  height: 600px;
   width: 100%;
 }
 
@@ -105,4 +105,21 @@ html {
 #footer p {
   margin: 0;
   font-size: 16px;
+}
+
+
+.path-start {
+  -webkit-transition:stroke-dashoffset 5s ease-in;
+     -moz-transition:stroke-dashoffset 5s ease-in;
+       -o-transition:stroke-dashoffset 5s ease-in;
+          transition:stroke-dashoffset 5s ease-in;
+}
+
+#map2 { 
+  position:relative; 
+  top:0; bottom:0; 
+  width:100%; 
+  height: 600px;
+  border: 1px black;
+  border-radius: 8px;
 }
