--- a/Tolu/HTML_Stuff/assets/css/style2.css
+++ b/Tolu/HTML_Stuff/assets/css/style2.css
@@ -1,3 +1,10 @@
+html,
+body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 
 body{
   font-family: 'Barlow Condensed' , sans-serif;
@@ -58,3 +65,38 @@ html {
   margin: 0;
   font-size: 16px;
 }
+
+.filters .panel-body {
+  padding: 0;
+}
+
+.filters {
+  margin-top: 10px;
+}
+
+select {
+  display: block;
+  width: 100%;
+  padding: 8px;
+  color: #8e979f;
+  outline: none;
+}
+
+#table-area th {
+  text-align: center;
+}
+
+#table-area th:first-child,
+#table-area th:nth-child(2),
+#table-area th:nth-child(6) {
+  min-width: 70px;
+}
+
+.loader {
+  margin-top: 50px;
+}
+
+.margin-top-50 {
+  margin-top: 50px;
+}
+
